--- a/solace/templates/storageClass.yaml
+++ b/solace/templates/storageClass.yaml
@@ -9,6 +9,8 @@ metadata:
 provisioner: kubernetes.io/aws-ebs
 {{- else if eq .Values.cloudProvider "gcp" }}
 provisioner: kubernetes.io/gcp-pd
+{{- else if eq .Values.cloudProvider "azure" }}
+provisioner: kubernetes.io/azure-disk
 {{- end}}
 parameters:
 #Default don't set zone or zones, allow k8s to strip across active zones
@@ -19,6 +21,9 @@ parameters:
   type: {{- if eq .Values.storage.type "fast" }} io1 {{ else }} gp2 {{ end -}}
 {{- else if eq .Values.cloudProvider "gcp" }}
   type: {{- if eq .Values.storage.type "fast" }} pd-ssd {{ else }} pd-standard {{ end -}}
+{{- else if eq .Values.cloudProvider "azure" }}
+  storageaccounttype: Standard_LRS
+  kind: Shared
 {{- end}}
 {{- if .Values.storage.fsType }}
   fsType: {{ .Values.storage.fsType }}
