--- a/solace/values-examples/prod1k-persist-noha-provisionPvc.yaml
+++ b/solace/values-examples/prod1k-persist-noha-provisionPvc.yaml
@@ -1,8 +1,7 @@
-# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
-#  and use this for Solace message spool 
+# Create a PV of specified size and type, bind PVC to PV 
 solace:
   redundancy: false
-  size: dev100
+  size: prod1k
 # Current options are [gcp|aws]
 cloudProvider: SOLOS_CLOUD_PROVIDER
 image:
@@ -19,24 +18,9 @@ service:
     - port: 22
       protocol: TCP
       name: ssh
-    - port: 1883
-      protocol: TCP
-      name: mqtt
-    - port: 5672
-      protocol: TCP
-      name: amqp
-    - port: 8000
-      protocol: TCP
-      name: mqttws     
     - port: 8080
       protocol: TCP
       name: semp
-    - port: 9000
-      protocol: TCP
-      name: rest
-    - port: 55003
-      protocol: TCP
-      name: smfc
     - port: 55555
       protocol: TCP
       name: smf
@@ -52,6 +36,13 @@ service:
     - port: 55555
       protocol: TCP
     - port: 22
-      protocol: TCP
 storage:
-  persistent: false
+storage:
+  persistent: true
+# For best performance set type:fast size:500Gi and fsType:xfs
+#  type: fast
+#  size: 500Gi
+#  fsType: xfs
+# For best compatability set type:standard size:30Gi and leave fsType default ext4
+  type: standard
+  size: 30Gi
