--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -15,12 +15,18 @@ data:
       export username_admin_globalaccesslevel=admin
       export service_ssh_port='22'
       export logging_debug_output=stdout
-{{- if eq .Values.solace.size "small" }}
+{{- if eq .Values.solace.size "dev100" }}
+      export system_scaling_maxconnectioncount="100"
+{{- else if eq .Values.solace.size "prod100" }}
+      export system_scaling_maxconnectioncount="100"
+{{- else if eq .Values.solace.size "prod1k" }}
       export system_scaling_maxconnectioncount="1000"
-{{- else if eq .Values.solace.size "medium" }}
+{{- else if eq .Values.solace.size "prod10k" }}
       export system_scaling_maxconnectioncount="10000"
-{{- else if eq .Values.solace.size "large" }}
+{{- else if eq .Values.solace.size "prod100k" }}
       export system_scaling_maxconnectioncount="100000"
+{{- else if eq .Values.solace.size "prod200k" }}
+      export system_scaling_maxconnectioncount="200000"
 {{- end }}
 {{- if .Values.solace.redundancy }}
       # [TODO] KBARR not using correct method of finding ordinal until we bump min Kubernetes release above 1.8.1
