--- a/solace/values-examples/prod1k-direct-noha-provisionPvc.yaml
+++ b/solace/values-examples/prod1k-direct-noha-provisionPvc.yaml
@@ -1,8 +1,8 @@
-# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
-#  and use this for Solace message spool 
+# Create a PV of specified size and type, bind PVC to PV 
+configurationFiles: false
 solace:
   redundancy: false
-  size: small
+  size: prod1k
 # Current options are [gcp|aws]
 cloudProvider: SOLOS_CLOUD_PROVIDER
 image:
@@ -38,4 +38,6 @@ service:
       protocol: TCP
     - port: 22
 storage:
-  persistent: false
+  type: standard
+  persistent: true
+  size: 30Gi
