--- a/solace/values-examples/prod1k-direct-noha.yaml
+++ b/solace/values-examples/prod1k-direct-noha.yaml
@@ -1,9 +1,8 @@
-# Bind PVC to existing voluem.  
-#  First create volume for example "gcloud compute disks create --size 30GB solace-disk"
-configurationFiles: false
+# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
+#  and use this for Solace message spool 
 solace:
   redundancy: false
-  size: small
+  size: prod1k
 # Current options are [gcp|aws]
 cloudProvider: SOLOS_CLOUD_PROVIDER
 image:
@@ -40,4 +39,3 @@ service:
     - port: 22
 storage:
   persistent: false
-  existingVolume: solace-disk
