--- a/solace/Chart.yaml
+++ b/solace/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-description: Deploy Solace VMR Singleton or HA Cluster onto a Kubernetes Cluster
+description: Deploy Solace PubSub+ Message Broker Singleton or HA Cluster onto a Kubernetes Cluster
 name: solace
-version: 0.2.0
+version: 0.3.0
 icon: https://dev.solace.com/wp-content/uploads/2016/10/solace-logo-white.png
 maintainers:
   - name: kenbarr
@@ -11,4 +11,5 @@ sources:
    - https://github.com/SolaceProducts/solace-kubernetes-quickstart
 keywords:
 - solace
-- vmr
+- pubsub+
+- message broker
