--- a/solace/templates/service.yaml
+++ b/solace/templates/service.yaml
@@ -21,6 +21,9 @@ spec:
   type: {{.Values.service.type}}
   ports:{{ range $item := .Values.service.externalPort }}
   - port: {{ $item.port }}
+{{- if item.targetport }}
+    targetPort: {{ $item.targetport }}
+{{- end }} #end targetport
     protocol: {{ $item.protocol }}
     name: {{ $item.name }}{{end}}
   selector:
