--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -13,7 +13,10 @@ data:
     # export username_admin_passwordfilepath={{ .Values.filepaths.secrets }}/username_admin_password
       export username_admin_password=`cat {{ .Values.filepaths.secrets }}/username_admin_password`
       export username_admin_globalaccesslevel=admin
-      export service_ssh_port='22'
+      export service_ssh_port='2222'
+      export service_webtransport_port='60080'
+      export service_webtransport_tlsport='60443'
+      export service_semp_tlsport='60943'
       export logging_debug_output=stdout
 {{- if eq .Values.solace.size "dev100" }}
       export system_scaling_maxconnectioncount="100"
