--- a/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
+++ b/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
@@ -18,24 +18,38 @@ service:
     - port: 22
       protocol: TCP
       name: ssh
+      targetport: 2222
     - port: 8080
       protocol: TCP
       name: semp
     - port: 55555
       protocol: TCP
       name: smf
-  internalPort:
+    - port: 943
+      protocol: TCP
+      name: semptls
+      targetport: 60943
     - port: 80
+      protocol: TCP
+      name: web
+      targetport: 60080
+    - port: 443
+      protocol: TCP
+      name: webtls
+      targetport: 60443
+  internalPort:
+    - port: 2222
       protocol: TCP
     - port: 8080
       protocol: TCP
-    - port: 443
-      protocol: TCP
-    - port: 8443
-      protocol: TCP
     - port: 55555
       protocol: TCP
-    - port: 22
+    - port: 60943
+      protocol: TCP
+    - port: 60080
+      protocol: TCP
+    - port: 60443
+      protocol: TCP
 storage:
   persistent: true
 # For best performance set type:fast size:500Gi and fsType:xfs
