Fix undefined targetport

--- a/solace/templates/secret.yaml
+++ b/solace/templates/secret.yaml
@@ -10,4 +10,4 @@ metadata:
     app: {{ template "solace.name" . }}
 type: Opaque
 data:
-  username_admin_password: {{ b64enc "SOLOS_ADMIN_PASSWORD" }}
+  username_admin_password: {{ b64enc "admin" }}
