--- a/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
+++ b/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
@@ -15,6 +15,7 @@ service:
   internal: false
   type: LoadBalancer
   externalPort:
+  externalPort:
     - port: 22
       protocol: TCP
       name: ssh
@@ -22,9 +23,11 @@ service:
     - port: 8080
       protocol: TCP
       name: semp
+      targetport: 8080
     - port: 55555
       protocol: TCP
       name: smf
+      targetport: 55555
     - port: 943
       protocol: TCP
       name: semptls
