--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ script:
   - curl -O https://sftp.solace.com/download/SDKPERF_C_LINUX64
   - tar -xvf SDKPERF_C_LINUX64
   - pubSubTools/sdkperf_c -cip=$url -mn=100000 -mr=0 -ptl=t1 -stl=t1 | grep "Total Messages"
+  - curl -sS -u admin:admin http://${url}:8080/SEMP -d "<rpc semp-version='soltr/8_5VMR'><show><config-sync></config-sync></show></rpc>" | grep "<oper-status>Up</oper-status>"
   
 
 after_success:
