Fix for failing config-sync in an HA cluster deplyment (#42)
* Fix for failing config-sync in an HA cluster deployment

--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -54,7 +54,7 @@ data:
       export redundancy_group_node_${service_name}2_connectvia=${service}-2.${service}-discovery.${namespace}.svc
 
       case ${node_ordinal} in
-      0 )
+      0)
        export nodetype=message_routing
        export redundancy_matelink_connectvia=${service}-1.${service}-discovery.${namespace}.svc
        export redundancy_activestandbyrole=primary
@@ -92,12 +92,12 @@ data:
           role_results=`{{ .Values.filepaths.configmap }}/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
                 -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
                 -v "/rpc-reply/rpc/show/redundancy/active-standby-role[text()]"`
-          case "`echo ${role_results} | xmllint -xpath "returnInfo/valueSearchResult" -`" in
-            "\"Primary\"")
+          case "`echo ${role_results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`" in
+            "Primary")
             role="primary"
             break
             ;;
-            "\"Backup\"")
+            "Backup")
             role="backup"
             break
             ;;
@@ -117,18 +117,18 @@ data:
           online_results=`{{ .Values.filepaths.configmap }}/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
               -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
               -v "/rpc-reply/rpc/show/redundancy/virtual-routers/${role}/status/activity[text()]"`
-          local_activity=`echo ${online_results} | xmllint -xpath "returnInfo/valueSearchResult" -`
+          local_activity=`echo ${online_results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
           echo "`date` INFO: ${APP}-Local activity state is: ${local_activity}"
           run_time=$((${count} * ${pause}))
           case "${local_activity}" in
-            "\"Local Active\"")
+            "Local Active")
               echo "`date` INFO: ${APP}-Redundancy is up locally Active, after ${run_time} seconds"
               echo "`date` INFO: "We should only be here on new cluster create, if not likely a bug"
               echo "`date` INFO: "   will issue a assert master to get back into sync"                              
               resync_step="assert-master"
               break
               ;;
-            "\"Mate Active\"")
+            "Mate Active")
               echo "`date` INFO: ${APP}-Redundancy is up mate Active, after ${run_time} seconds" 
               echo "`date` INFO: "This is normal state if we are backup or recreated later on"
               echo "`date` INFO: "   will issue a resync master to get back into sync"            
@@ -154,11 +154,11 @@ data:
             online_results=`{{ .Values.filepaths.configmap }}/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
                 -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
                 -v "/rpc-reply/rpc/show/redundancy/virtual-routers/${role}/status/detail/priority-reported-by-mate/summary[text()]"`
-            mate_activity=`echo ${online_results} | xmllint -xpath "returnInfo/valueSearchResult" -`
+            mate_activity=`echo ${online_results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
             echo "`date` INFO: ${APP}-Mate activity state is: ${mate_activity}"
             run_time=$((${count} * ${pause}))
             case "${mate_activity}" in
-              "\"Standby\"")
+              "Standby")
                 echo "`date` INFO: ${APP}-Redundancy is up end-to-end, Local Active Mate Standby, after ${run_time} seconds"
                 break
                 ;;
@@ -225,7 +225,7 @@ data:
       role_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
               -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><group/></redundancy></show></rpc>" \
               -c "/rpc-reply/rpc/show/redundancy/group-node/status[text() = \"Online\"]"`
-      if [ `echo ${role_results} |  xmllint -xpath "returnInfo/countSearchResult" -` -eq 3 ]; then
+      if [ `echo ${role_results} |  xmllint -xpath "string(returnInfo/countSearchResult)" -` -eq 3 ]; then
         echo "`date` INFO: ${APP}-Monitor node is redundancy ready"
         exit 0
       else
@@ -269,17 +269,17 @@ data:
     online_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
             -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
             -v "/rpc-reply/rpc/show/redundancy/virtual-routers/${config_role}/status/activity[text()]"`
-    local_activity=`echo ${online_results} | xmllint -xpath "returnInfo/valueSearchResult" -`
+    local_activity=`echo ${online_results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
     echo "`date` INFO: ${APP}-Local activity state is: ${local_activity}"
     case "${local_activity}" in
-      "\"Local Active\"")
+      "Local Active")
         echo "`date` INFO: ${APP}-Redundancy is up locally Active"
         # Set active label to "true"
         set_label "active" "true" $state_file
         # Pass readiness check
         exit 0
         ;;
-      "\"Mate Active\"")
+      "Mate Active")
         echo "`date` INFO: ${APP}-Redundancy is up mate Active"
         # Set active label to "false"
         set_label "active" "false" $state_file
