Changed security context to use unprivileged container, moved privileged ports out of <1024 range, and documentation updates (#43)
Changed security context to use unprivileged container, moved privileged ports out of <1024 range, and documentation updates

--- a/solace/templates/service.yaml
+++ b/solace/templates/service.yaml
@@ -21,6 +21,7 @@ spec:
   type: {{.Values.service.type}}
   ports:{{ range $item := .Values.service.externalPort }}
   - port: {{ $item.port }}
+    targetPort: {{ $item.targetport }}
     protocol: {{ $item.protocol }}
     name: {{ $item.name }}{{end}}
   selector:
