--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ script:
   - kubectl get statefulset,svc,pods,pvc,pv --show-labels
   - echo "Waiting for cluster to become active"
   - "travis_wait 30 sleep 1800 &"
+  - sleep 40; kubectl describe nodes # This shall show resource availability
   - until kubectl get pods --show-labels | grep solace-0 | grep -m 1 -E 'active=true'; do sleep 10; done
   - until kubectl get pods --show-labels | grep solace-1 | grep -m 1 -E '1/1'; do sleep 10; done
   - until kubectl get pods --show-labels | grep solace-2 | grep -m 1 -E '1/1'; do sleep 10; done
