--- a/solace/Chart.yaml
+++ b/solace/Chart.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 description: Deploy Solace PubSub+ Message Broker Singleton or HA Cluster onto a Kubernetes Cluster
 name: solace
-version: 0.3.0
-icon: https://dev.solace.com/wp-content/uploads/2016/10/solace-logo-white.png
+version: 1.0.1
+icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
 maintainers:
+  - name: bczoma
+    email: balazs.czoma@solace.com
   - name: kenbarr
     email: ken.barr@solace.com
 home: http://dev.solace.com
