--- a/solace/templates/podModRbac.yaml
+++ b/solace/templates/podModRbac.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "solace.fullname" . }}-pod-tag-updater
+  name: {{ template "solace.fullname" . }}-podtagupdater
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"]
@@ -12,11 +12,11 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{ template "solace.fullname" . }}-solace
+  name: {{ template "solace.fullname" . }}-serviceaccounts-to-podtagupdater
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "solace.fullname" . }}-pod-tag-updater
+  name: {{ template "solace.fullname" . }}-podtagupdater
 subjects:
 - kind: Group
   name: system:serviceaccounts
